[package]
name = "kernel"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Harald Hoyer <harald@redhat.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
vmbootspec = {version = "0", path = "./vmbootspec"}

vmsyscall = { version = "0.1", git = "https://github.com/enarx/enarx"}
linux-syscall = { version="0.1", git = "https://github.com/enarx/enarx" }
linux-errno = { version="0.1", git = "https://github.com/enarx/enarx" }
crt0stack = { version = "0.6", git="https://github.com/haraldh/crt0stack", rev="dd2dfb680a787911aa05464f687b121f93a8ec6f"}

xmas-elf = "0.7.0"
spin = "0.5.2"

pic8259_simple = {version = "0.1.1", optional = true }

x2apic = {version = "0.1.0", optional = true }
linked_list_allocator = {version = "0.6.6", optional = true }

bitflags = "1.0.4"
serde_cbor = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
cstrptr = { version = "0.1", default-features = false, features = ["alloc"] }
#safe-transmute = "0.10.1"
lazy_static = { version="1.4.0", features = ["spin_no_std"] }

[dependencies.x86_64]
version = "0.9.2"
# path = "../x86_64"
# default-features = false
# features = ["stable", "abi_x86_interrupt"]

[dependencies.uart_16550]
version = "0.2.1"
# path="../uart_16550"
# default-features = false
# features = ["stable"]


[build-dependencies]
cc = "1.0.37"
llvm-tools = "0.1.1"
version_check = "0.9.1"

[features]
default = [ "nightly" ]
nightly = [ "cstrptr/unstable", "linked_list_allocator" ]
#nightly = [ "cstrptr/unstable", "linked_list_allocator", "x86_64/nightly", "uart_16550/nightly"]
timer = ["x2apic", "pic8259_simple"]
