[package]
name = "kernel"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Harald Hoyer <harald@redhat.com>"]
edition = "2018"

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"

[dependencies]
bitflags = "1.0.4"
crt0stack = { version = "0.6", git = "https://github.com/enarx/enarx" }
cstrptr = { version = "0.1", default-features = false, features = ["alloc"], optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = { version = "0.8.1", optional = true }
linux-errno = { version = "0.1", git = "https://github.com/enarx/enarx" }
linux-syscall = { version = "0.1", git = "https://github.com/enarx/enarx" }
pic8259_simple = { version = "0.1.1", optional = true }
#safe-transmute = "0.10.1"
#serde_cbor = { version = "0.11", default-features = false }
#serde = { version = "1.0", default-features = false, features = ["derive"] }
spin = "0.5.2"
uart_16550 =  { version = "0.2.4", default-features = false, features = ["stable"] }
vmbootspec = { version = "0.1", path = "./vmbootspec" }
#vmsyscall = { version = "0.1", git = "https://github.com/enarx/enarx" }
x2apic = { version = "0.1.0", optional = true }
x86_64 = { version = "0.9.6", default-features = false, features = ["stable"] }
xmas-elf = "0.7.0"

[build-dependencies]
cc = "1.0.37"
llvm-tools = "0.1.1"
version_check = "0.9.1"

[features]
default = [ ]
nightly = [ ]
inline_asm = [ "nightly", "x86_64/nightly", "uart_16550/nightly"]
qemu = [ "nightly", "timer", "allocator", "x86_64/abi_x86_interrupt" ]
timer = [ "nightly", "x2apic", "pic8259_simple" ]
allocator = [ "nightly", "cstrptr", "linked_list_allocator"]
