[package]
name = "kernel"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Harald Hoyer <harald@redhat.com>"]
edition = "2018"

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"

[dependencies]
bitflags = "1.0.4"
crt0stack = { version = "0.6", git = "https://github.com/enarx/enarx" }
linux-errno = { version = "0.1", git = "https://github.com/enarx/enarx" }
linux-syscall = { version = "0.1", git = "https://github.com/enarx/enarx" }
vmbootspec = { version = "0.1", path = "./vmbootspec" }
vmsyscall = { version = "0.2", path = "../vmsyscall" }
x86_64 = { version = "0.9.6", default-features = false, features = ["stable"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"

# optional crates
linked_list_allocator = { version = "0.8.1", optional = true }
pic8259_simple = { version = "0.1.1", optional = true }
x2apic = { version = "0.1.0", optional = true }
uart_16550 =  { version = "0.2.4", default-features = false, features = ["stable"], optional = true}

[build-dependencies]
cc = "1.0.37"

[features]
default = [ ]
nightly = [ ]
inline_asm = [ "nightly", "x86_64/nightly"]
qemu = [ "nightly", "timer", "allocator", "x86_64/abi_x86_interrupt", "uart_16550" ]
timer = [ "nightly", "x2apic", "pic8259_simple" ]
allocator = [ "nightly", "linked_list_allocator"]
