[package]
name = "vmrun"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmbootspec = {version = "0", path = "../vmbootspec"}

linux-errno = { version="0.1", git = "https://github.com/enarx/enarx" }
vmsyscall = { version = "0.1", git = "https://github.com/enarx/enarx"}

fc_devices = { version="0.1", git = "https://github.com/firecracker-microvm/firecracker", package="devices", rev="f55da99544f16280c31919b2596522c18d83e5e1"}
fc_utils = { version="0.1", git = "https://github.com/firecracker-microvm/firecracker", package="utils", rev="f55da99544f16280c31919b2596522c18d83e5e1" }

kvm-ioctls = "0.4.0"
kvm-bindings = "0.2.0"
vmm-sys-util = "0.4.0"
bit_field = "0.10.0"
xmas-elf = "0.7.0"
bitflags = "1.2.1"
mmap = "0.1.1"
serde_cbor = "0.11.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.ux]
default-features = false
version = "0.1.3"

