[package]
name = "vmrun"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmbootspec = {version = "0", path = "../kernel/vmbootspec"}
linux-errno = { version="0.1", git = "https://github.com/enarx/enarx" }
kvm-ioctls = "0.5.0"
kvm-bindings = "0.2.0"
vmm-sys-util = "0.4.0"
bit_field = "0.10.0"
xmas-elf = "0.7.0"
bitflags = "1.2.1"
mmap = "0.1.1"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.ux]
default-features = false
version = "0.1.3"

[dependencies.vmsyscall]
version = "0.2"
path = "../vmsyscall"
